--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 </head>
 <body>
   <div class="intro-screen glow" id="intro-screen" aria-label="Enter site">
-    <img src="https://m.media-amazon.com/images/I/31P00Fjc1pL._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" alt="Logo">
+    <img src="https://images.genius.com/9304b31c82b7474e4ee9c5188637fcf8.500x500x1.jpg" alt="Logo">
     click to enter
   </div>
 
