--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
     }
     .x-logo {
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023.svg');
+      background-image: url('https://github.com/jujuexe/Juju-wtf/blob/main/whitex.png?raw=true');
     }
     .discord-logo:hover, .x-logo:hover {
       transform: scale(1.05);
@@ -219,7 +219,7 @@
   </video>
 
   <div class="container">
-    <img src="https://pub-3bfa94b368d34d7e839934cc455b9712.r2.dev/ec8682c3a3959691f9506c79de83c2f0.png" alt="pfp" class="pfp">
+    <img src="https://pub-2b7e3ba1dce7464f9bd1c96a8a0e5a8b.r2.dev/d8dc23f0f82e42c694c97556ec4c4815.png" alt="pfp" class="pfp">
     <div class="title">JuJu.wtf</div>
     <div class="discord-wrapper">
       <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
