--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   </video>
 
   <div class="container">
-    <img src="https://pub-2b7e3ba1dce7464f9bd1c96a8a0e5a8b.r2.dev/d8dc23f0f82e42c694c97556ec4c4815.png" alt="pfp" class="pfp">
+    <img src="https://r2.guns.lol/147cf449-399d-4408-b008-f07f093c5448.webp" alt="pfp" class="pfp">
     <div class="title">JuJu.wtf</div>
     <div class="discord-wrapper">
       <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
