--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <body>
   <div class="intro-screen glow" id="intro-screen" aria-label="Enter site">
     <img src="https://images.genius.com/9304b31c82b7474e4ee9c5188637fcf8.500x500x1.jpg" alt="Logo">
-    click to enter
+    click to enter <3
   </div>
 
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
