--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   </div>
 
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
-    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/0422%20(1).mp4" type="video/mp4">
+    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Freestyle.mp4" type="video/mp4">
   </video>
 
   <div class="container">
@@ -230,7 +230,7 @@
   </div>
 
   <div id="audio-controls">
-    <div id="song-title">Now Playing: Flxr</div>
+    <div id="song-title">Now Playing: Freestyle</div>
     <button id="pause-button">Pause ⏯</button>
   </div>
 
