--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   </div>
 
   <div id="audio-controls">
-    <div id="song-title">Now Playing: Freestyle</div>
+    <div id="song-title">Now Playing: Wok</div>
     <button id="pause-button">Pause ⏯</button>
   </div>
 
