--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   </video>
 
   <div class="container">
-    <img src="https://r2.guns.lol/147cf449-399d-4408-b008-f07f093c5448.webp" alt="pfp" class="pfp">
+    <img src="https://raw.githubusercontent.com/jujuexe/Juju-wtf/main/konatamask.jpg" alt="pfp" class="pfp">
     <div class="title">JuJu.wtf</div>
     <div class="discord-wrapper">
       <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
