--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       cursor: pointer;
       transition: opacity .5s ease;
       z-index: 100;
-      text-shadow: 0 0 10px #fff, 0 0 20px #ff69b4;
+      text-shadow: 0 0 10px #fff, 0 0 20px #00bfff;
       animation: pulseGlow 2s infinite ease-in-out;
     }
     .intro-screen img {
@@ -58,7 +58,7 @@
       margin-bottom: 15px;
       border-radius: 50%;
       object-fit: cover;
-      box-shadow: 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      box-shadow: 0 0 10px #fff, 0 0 20px #00bfff, 0 0 30px #00bfff;
       animation: pulseGlow 2s infinite ease-in-out;
     }
     .hidden {
@@ -83,7 +83,7 @@
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 20px;
-      box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #00bfff, 0 0 30px #00bfff;
       animation: pulseGlow 2s infinite ease-in-out;
     }
     .title {
@@ -93,7 +93,7 @@
       position: relative;
       transition: transform .3s ease, opacity .5s ease;
       animation: pulseGlow 2s infinite ease-in-out;
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #00bfff, 0 0 30px #00bfff;
     }
     .discord-tooltip,
     .x-tooltip,
@@ -103,10 +103,10 @@
     }
     @keyframes pulseGlow {
       0%, 100% {
-        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #00bfff, 0 0 30px #00bfff;
       }
       50% {
-        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff69b4, 0 0 40px #ff69b4;
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #00bfff, 0 0 40px #00bfff;
       }
     }
     .discord-wrapper {
@@ -145,7 +145,7 @@
       text-indent: -9999px;
       overflow: hidden;
       transition: transform 0.3s ease;
-      filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #ff69b4);
+      filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #00bfff);
       animation: pulseGlow 2s infinite ease-in-out;
     }
     .discord-logo {
@@ -156,7 +156,7 @@
     }
     .discord-logo:hover, .x-logo:hover {
       transform: scale(1.05);
-      filter: drop-shadow(0 0 10px #fff) drop-shadow(0 0 20px #ff69b4);
+      filter: drop-shadow(0 0 10px #fff) drop-shadow(0 0 20px #00bfff);
     }
     #audio-controls {
       position: absolute;
@@ -193,7 +193,7 @@
       border-radius: 50%;
       pointer-events: none;
       z-index: 9999;
-      box-shadow: 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      box-shadow: 0 0 10px #fff, 0 0 20px #00bfff, 0 0 30px #00bfff;
       animation: sparkleFade 1s ease-out forwards;
     }
     @keyframes sparkleFade {
