--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 </head>
 <body>
   <div class="intro-screen glow" id="intro-screen" aria-label="Enter site">
-    <img src="https://images.genius.com/9304b31c82b7474e4ee9c5188637fcf8.500x500x1.jpg" alt="Logo">
+    <img src="https://tr.rbxcdn.com/180DAY-7c42717c8818f6bda9351101ebda3854/420/420/Hat/Webp/noFilter" alt="Logo">
     click to enter <3
   </div>
 
