--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 </head>
 <body>
   <div class="intro-screen glow" id="intro-screen" aria-label="Enter site">
-    <img src="https://tr.rbxcdn.com/180DAY-7c42717c8818f6bda9351101ebda3854/420/420/Hat/Webp/noFilter" alt="Logo">
+    <img src="https://github.com/jujuexe/Juju-wtf/blob/main/bluetriforce.png?raw=true" alt="Logo">
     click to enter <3
   </div>
 
