--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   </video>
 
   <div class="container">
-    <img src="https://raw.githubusercontent.com/jujuexe/Juju-wtf/main/konatamask.jpg" alt="pfp" class="pfp">
+    <img src="https://github.com/jujuexe/Juju-wtf/blob/main/meondcrn.png?raw=true" alt="pfp" class="pfp">
     <div class="title">JuJu.wtf</div>
     <div class="discord-wrapper">
       <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
