--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   </div>
 
   <div id="audio-controls">
-    <div id="song-title">Now Playing: Wok</div>
+    <div id="song-title">Now Playing: LiveLeak</div>
     <button id="pause-button">Pause ⏯</button>
   </div>
 
