--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="https://github.com/jujuexe/fr/blob/main/980195a4b420a62cfca4fa7450db7ab7.png?raw=true">
+  <link rel="icon" type="https://github.com/jujuexe/fr/blob/main/anarchy.png?raw=true">
   <meta property="og:url" content="https://JuJu.wtf/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="JuJu">
   <meta property="og:description" content="haiii everyone :3">
-  <meta property="og:image" content="https://github.com/jujuexe/fr/blob/main/980195a4b420a62cfca4fa7450db7ab7.png?raw=true">
+  <meta property="og:image" content="https://github.com/jujuexe/fr/blob/main/anarchy.png?raw=true">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>♡ juju.wtf</title>
