--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:url" content="https://JuJu.wtf/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="JuJu">
-  <meta property="og:description" content="haiii :3">
+  <meta property="og:description" content="made by @JuJu.wtf">
   <meta property="og:image" content="https://github.com/jujuexe/fr/blob/main/anarchy.png?raw=true">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
