--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="https://github.com/jujuexe/fr/blob/main/anarchy.png?raw=true">
+  <link rel="icon" href="https://github.com/jujuexe/fr/blob/main/anarchy.png?raw=true" type="image/png">
   <meta property="og:url" content="https://JuJu.wtf/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="JuJu">
